# cmake

./: CMakeLists.txt  Makefile  commands.md  conanfile.py  vcpkg.json
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
configured/: config.hpp.in
docs/: Doxyfile
src/: commands.md  main.cpp  my_lib.cpp  my_lib.h
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
tests/: CMakeLists.txt  main.cpp
